--- a/view/expense.html
+++ b/view/expense.html
@@ -1,40 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <label for="amount">Expense Amount</label>
-    <input type = "number" id="amount">
-    <label for = "description">Description</label>
-    <input type="text" id="description">
+    <input type="number" id="amount" />
+    <label for="description">Description</label>
+    <input type="text" id="description" />
     <label for="category"> Category</label>
-    <input type="text" id="category">
+    <input type="text" id="category" />
     <button id="add-expense">Add Expense</button>
+    <div id="div"></div>
     <!-- <button id="premium">Buy Premium</button> -->
     <script>
-        const check = localStorage.getItem("isprime");
-        console.log("value of localstorage is =" , check);
-        if(check == 0){
-            const premiumbtn = document.createElement("button");
-            premiumbtn.id = "premium";
-            premiumbtn.textContent = "Buy Premium";
-            document.body.appendChild(premiumbtn);
-            
-         }
-         else{
-            const h5 = document.createElement("h5");
-            h5.textContent = "You Are Premium User";
-            document.body.appendChild(h5);
-         }
+      function parseJwt(token) {
+        var base64Url = token.split(".")[1];
+        var base64 = base64Url.replace(/-/g, "+").replace(/_/g, "/");
+        var jsonPayload = decodeURIComponent(
+          window
+            .atob(base64)
+            .split("")
+            .map(function (c) {
+              return "%" + ("00" + c.charCodeAt(0).toString(16)).slice(-2);
+            })
+            .join("")
+        );
 
+        return JSON.parse(jsonPayload);
+      }
+      const Token = localStorage.getItem("token");
+      const decode = parseJwt(Token);
+      console.log(decode.premium);
+
+      if (decode.premium) {
+        const h5 = document.createElement("h5");
+        h5.textContent = "You Are Premium User";
+        document.body.appendChild(h5);
+        const leaderbtn = document.createElement("button");
+        leaderbtn.id = "leader-btn";
+        leaderbtn.textContent = "Show Leadership";
+        document.body.appendChild(leaderbtn);
+      } else {
+        const premiumbtn = document.createElement("button");
+        premiumbtn.id = "premium";
+        premiumbtn.textContent = "Buy Premium";
+        document.body.appendChild(premiumbtn);
+      }
     </script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <ol id="mainlist"></ol>
+    <ol id="list"></ol>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
     <script src="expense.js"></script>
-
-</body>
+  </body>
 </html>
