forgot password mail send to user successfully

--- a/view/login.html
+++ b/view/login.html
@@ -11,6 +11,7 @@
       <input type="password" id="Password" required />
       <button id="Login">Login</button>
       <button id="Signup">Signup</button>
+      <button id="forgotpass">forgot Password</button>
       <div id="Error-Message" style="color: red"></div>
     </form>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
