--- a/view/expense.html
+++ b/view/expense.html
@@ -1,3 +1,5 @@
+<!-- with pagination -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,7 +15,15 @@
     <label for="category"> Category</label>
     <input type="text" id="category" />
     <button id="add-expense">Add Expense</button>
-    <div id="div"></div>
+    <div id="pagination-button"></div>
+    <label for="rows">Rows per Page</label>
+    <select name="rows" id="rows">
+        <option value="5">5</option>
+        <option value="10">10</option>
+        <option value="15">15</option>
+        <option value="20">20</option>
+       </select>
+   
     <!-- <button id="premium">Buy Premium</button> -->
     <script>
       function parseJwt(token) {
@@ -43,6 +53,10 @@
         leaderbtn.id = "leader-btn";
         leaderbtn.textContent = "Show Leadership";
         document.body.appendChild(leaderbtn);
+        const download = document.createElement("button");
+        download.id = "download";
+        download.textContent = "Download";
+        document.body.appendChild(download);
       } else {
         const premiumbtn = document.createElement("button");
         premiumbtn.id = "premium";
@@ -57,3 +71,84 @@
     <script src="expense.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- without paginaion -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <label for="amount">Expense Amount</label>
+    <input type="number" id="amount" />
+    <label for="description">Description</label>
+    <input type="text" id="description" />
+    <label for="category"> Category</label>
+    <input type="text" id="category" />
+    <button id="add-expense">Add Expense</button>
+    <div id="div"></div> -->
+    <!-- <button id="premium">Buy Premium</button> -->
+    <!-- <script>
+      function parseJwt(token) {
+        var base64Url = token.split(".")[1];
+        var base64 = base64Url.replace(/-/g, "+").replace(/_/g, "/");
+        var jsonPayload = decodeURIComponent(
+          window
+            .atob(base64)
+            .split("")
+            .map(function (c) {
+              return "%" + ("00" + c.charCodeAt(0).toString(16)).slice(-2);
+            })
+            .join("")
+        );
+
+        return JSON.parse(jsonPayload);
+      }
+      const Token = localStorage.getItem("token");
+      const decode = parseJwt(Token);
+      console.log(decode.premium);
+
+      if (decode.premium) {
+        const h5 = document.createElement("h5");
+        h5.textContent = "You Are Premium User";
+        document.body.appendChild(h5);
+        const leaderbtn = document.createElement("button");
+        leaderbtn.id = "leader-btn";
+        leaderbtn.textContent = "Show Leadership";
+        document.body.appendChild(leaderbtn);
+        const download = document.createElement("button");
+        download.id = "download";
+        download.textContent = "Download";
+        document.body.appendChild(download);
+      } else {
+        const premiumbtn = document.createElement("button");
+        premiumbtn.id = "premium";
+        premiumbtn.textContent = "Buy Premium";
+        document.body.appendChild(premiumbtn);
+      }
+    </script> -->
+    <!-- <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <ol id="mainlist"></ol>
+    <ol id="list"></ol>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
+    <script src="expense.js"></script>
+  </body>
+</html> -->
+
+
